# cookiecutter-python-project

./: .cruft.json  .gitignore  .prettierignore  .prettierrc  README.md  check_project.py  cookiecutter.json  package.json  pyproject.toml
.github/workflows/: qa.yml
.stubs/: deepdiff.pyi
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.directory_name}}/: .gitignore  .prettierignore  CHANGELOG.md  LICENSE.txt  README.md  _config.yml  package.json  pyproject.toml
{{cookiecutter.directory_name}}/.github/: FUNDING.yml
{{cookiecutter.directory_name}}/.github/workflows/: close-inactive.yml  publish.yml  qa.yml  tests.yml
{{cookiecutter.directory_name}}/docs/: conf.py  index.rst
{{cookiecutter.directory_name}}/tests/: conftest.py
{{cookiecutter.directory_name}}/{{cookiecutter.module_name}}/: __init__.py  main.py  utils.py
